mobile relevant changes and reporting

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
           <a class="btn btn-light" href="/sales">Sales</a>
           <a class="btn btn-light" href="/lots">Lot Info</a>
           <a class="btn btn-light" href="/entry">Entry</a>
+          <a class="btn btn-warning" href="/reports">Reports</a> <!-- New Reports button -->
         </div>
       </div>
     </nav>
